# tree-sitter-demo-py

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
parser_ts/: __init__.py  helpers.py
parser_ts/kotlin/: __init__.py  kotlin_class.py  language.py  queries.py
scripts/: build.sh  init.sh  run_tests.sh
test/: kotlin_parse_test.py  pytest.ini
